--- a/chatidk/templates/home.html
+++ b/chatidk/templates/home.html
@@ -8,9 +8,11 @@
         <li><span>{{ active_user }}</span>
         <form action="/logout" method="GET">
             <input type="submit" value="Kirjaudu ulos">
+            <input type="hidden" name="csrf_token" value="{{ session.csrf_token }}">
         </form>
         <form action="/deactivate" method="GET">
             <input type="submit" value="Poista tili">
+            <input type="hidden" name="csrf_token" value="{{ session.csrf_token }}">
         </form>
         <div>
         {% if users %}
@@ -18,6 +20,7 @@
                 <li>{{ user }}</li>
                 <form action="/chat" method="GET">
                     <button type="submit" name="chat" value="{{ user }}">Keskustele</button>
+                    <input type="hidden" name="csrf_token" value="{{ session.csrf_token }}">
                 </form>
             {% endfor %}
         {% endif %}
